--- a/index.html
+++ b/index.html
@@ -9,25 +9,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
     <title>Instagram</title>
 </head>
 
 <body>
+
+    <!-- header goes here  -->
     <header>
         <img src="logo.png">
+        <!-- navbar goes here  -->
         <nav>
             <i class="fa fa-plus-square-o"></i>
             <img src="icons/message.png">
         </nav>
+
     </header>
+
+    <!-- article section goes here  -->
     <article>
+
+        <!-- section 1 starts here  -->
         <section>
+
             <!-- story section goes here  -->
             <div id="story">
             </div>
+
             <!-- post section goes here  -->
             <div id="posts">
             </div>
+            
+            <!-- you are all caught up post is here  -->
             <div id="caughtUp">
                 <div id="tick">
                     <img src="icons/tick.jpg" alt="">
@@ -36,7 +49,9 @@
                 <div id="paragraph">You've seen all new posts from the past 1 day.</div>
                 <div id="olderPost"><a href="#story">View Older Posts</a></div>
             </div>
+
         </section>
+
     </article>
 
     <footer>
