--- a/index.html
+++ b/index.html
@@ -35,11 +35,33 @@
             <!-- story section goes here  -->
             <div id="story">
             </div>
+            
+            <div id="storyContainer">
+                <div id="story-head">
+                    <div>
+                        <i id="backButton" class="fa fa-arrow-left"></i>
+                        <div id="scale">
+                            <div id="fill"></div>
+                        </div>
+                    </div>
+                    <div id="story-details">
+                        <div>
+                            <img id="story-image" src="icons/user.jpg">
+                            <div id="story-name">name</div>
+                            <div id="story-time">time</div>
+                        </div>
+                        <div>
+                            <i class="fa fa-ellipsis-v"></i>
+                        </div>
+                    </div>
+                </div>
+                <video id="story-content" loop src="story/user.mp4"></video>
+            </div>
 
             <!-- post section goes here  -->
             <div id="posts">
             </div>
-            
+
             <!-- you are all caught up post is here  -->
             <div id="caughtUp">
                 <div id="tick">
