--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="storyContainer">
                 <div id="story-head">
                     <div>
-                        <i id="backButton">&LeftArrow;</i>
+                        <i id="backButton" class="fa fa-arrow-left"></i>
                         <div id="scale">
                             <div id="fill"></div>
                         </div>
