--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                 </div>
-                <video id="story-content" loop src="story/user.mp4"></video>
+                <video id="story-content" src="story/user.mp4"></video>
             </div>
 
             <!-- post section goes here  -->
